--- a/frontend/src/app/components/book-edit/book-edit.component.html
+++ b/frontend/src/app/components/book-edit/book-edit.component.html
@@ -17,7 +17,7 @@
           <div
             *ngIf="editBookForm.get('title')?.invalid && editBookForm.get('title')?.touched"
             class="text-danger mt-1">
-            Titre requis (minimum 3 caractères).
+            Titre requis.
           </div>
         </div>
 
@@ -33,7 +33,7 @@
           <div
             *ngIf="editBookForm.get('author')?.invalid && editBookForm.get('author')?.touched"
             class="text-danger mt-1">
-            Auteur requis (minimum 3 caractères).
+            Auteur requis.
           </div>
         </div>
 
